[gd_scene load_steps=10 format=2]

[ext_resource path="res://Src/Gui/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/weapons/Ak 47.png" type="Texture" id=2]
[ext_resource path="res://Src/Gui/ColorRect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/weapons/shot gun cocker.png" type="Texture" id=4]
[ext_resource path="res://Assets/weapons/shot gun.PNG" type="Texture" id=5]
[ext_resource path="res://Src/Gui/Store.gd" type="Script" id=6]
[ext_resource path="res://Src/Gui/Label.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/coin.png" type="Texture" id=8]
[ext_resource path="res://Assets/weapons/ghost pistol.png" type="Texture" id=9]

[node name="Store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" parent="." instance=ExtResource( 3 )]

[node name="Ak47" type="Sprite" parent="."]
position = Vector2( 140, 51 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="ShotGun" type="Sprite" parent="."]
position = Vector2( 222, 50 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="ShotGun2" type="Sprite" parent="ShotGun"]
texture = ExtResource( 4 )

[node name="EquipAk47" parent="." instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 123.0
margin_right = 161.0
margin_bottom = 140.0
text = "EQUIP"

[node name="EquipShotgun" parent="." instance=ExtResource( 1 )]
margin_left = 196.0
margin_top = 123.0
margin_right = 253.0
margin_bottom = 140.0
text = "EQUIP"

[node name="EquipPistol" parent="." instance=ExtResource( 1 )]
margin_left = 19.0
margin_top = 122.0
margin_right = 76.0
margin_bottom = 139.0
text = "EQUIP"

[node name="Label" parent="." instance=ExtResource( 7 )]
margin_left = -184.0
margin_top = 23.0
margin_right = -144.0
margin_bottom = 43.0
text = "AK47"

[node name="Label2" parent="." instance=ExtResource( 7 )]
margin_left = -104.0
margin_top = 23.0
margin_right = -41.0
margin_bottom = 43.0
text = "SHOTGUN"

[node name="Store" parent="." instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = -74.0
margin_right = 32.0
margin_bottom = -41.0
text = "STORE"

[node name="StatsAK47" parent="." instance=ExtResource( 7 )]
margin_left = -212.0
margin_top = 78.0
margin_right = -86.0
margin_bottom = 98.0
rect_scale = Vector2( 0.76, 0.68 )
text = "Shoots more bullets :)"

[node name="StatsShotgun" parent="." instance=ExtResource( 7 )]
margin_left = -143.0
margin_top = 66.0
margin_right = 34.0
margin_bottom = 117.0
rect_scale = Vector2( 0.76, 0.68 )
text = "                     More power
			               Blows  everything
                   in it's path                "
align = 0

[node name="CoinAmount" parent="." instance=ExtResource( 7 )]
margin_left = -287.0
margin_top = 13.0
margin_right = -259.0
margin_bottom = 28.0
rect_scale = Vector2( 0.8, 0.72 )
text = "1000"
align = 0

[node name="Coin" type="Sprite" parent="."]
modulate = Color( 1, 0.952941, 0.27451, 1 )
position = Vector2( 7, 19 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Ak47Cost" parent="." instance=ExtResource( 7 )]
margin_left = -179.0
margin_top = 104.0
margin_right = -151.0
margin_bottom = 119.0
rect_scale = Vector2( 0.8, 0.72 )
text = "500"
align = 0

[node name="Coin2" type="Sprite" parent="."]
modulate = Color( 1, 0.952941, 0.27451, 1 )
position = Vector2( 115, 110 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Pistol" type="Sprite" parent="."]
position = Vector2( 48, 44 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="Pistol2" parent="." instance=ExtResource( 7 )]
margin_left = -269.0
margin_top = 22.0
margin_right = -229.0
margin_bottom = 42.0
text = "PISTOL"

[node name="StatsPistol" parent="." instance=ExtResource( 7 )]
margin_left = -297.0
margin_top = 77.0
margin_right = -171.0
margin_bottom = 97.0
rect_scale = Vector2( 0.76, 0.68 )
text = "       Classic gun
          For noobs"
align = 0

[node name="ShotgunCost" parent="." instance=ExtResource( 7 )]
margin_left = -84.0
margin_top = 107.0
margin_right = -56.0
margin_bottom = 122.0
rect_scale = Vector2( 0.8, 0.72 )
text = "1000"
align = 0

[node name="Coin3" type="Sprite" parent="."]
modulate = Color( 1, 0.952941, 0.27451, 1 )
position = Vector2( 210, 113 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[connection signal="button_up" from="EquipAk47" to="." method="_on_EquipAk47_button_up"]
[connection signal="button_up" from="EquipShotgun" to="." method="_on_EquipShotgun_button_up"]
[connection signal="button_up" from="EquipPistol" to="." method="_on_EquipPistol_button_up"]
